tests/paczka1/fuzzy1/27371022.err
Error in line 3: S600 S600 6,8
Error in line 7: Ufeb4Bg4mP S75 35,7
Error in line 17: S600 S600 9,8
Error in line 21: 1PhX S75 58,1
Error in line 32: eHuU6fr4uy S600 15,1
Error in line 36: eHuU6fr4uy A828 97,4
